# auto-brain-rot-YouTube-short-script

./: .gitignore  README.md  config.example.json  pyproject.toml
assets/music/: LICENSES.md  README.md
brainrot/: __init__.py  agents.py  audio.py  captions.py  claude.py  cli.py  fiction.py  files.py  models.py  openai.py  render.py  scriptgen.py  topics.py  voice.py  youtube.py
